# withthanks

./: .env  .env.example  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  data.csv  db.sqlite3  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  ruff.toml
.codacy/: codacy.yaml
.github/: copilot-instructions.md
.github/instructions/: api.instructions.md  celery.instructions.md  django.instructions.md  security.instructions.md  templates.instructions.md  testing.instructions.md
.github/prompts/: code-review.prompt.md  debug-fix.prompt.md  new-api-endpoint.prompt.md  new-celery-task.prompt.md  new-feature.prompt.md  new-migration.prompt.md  new-model.prompt.md  new-service.prompt.md  new-template.prompt.md  new-test.prompt.md  new-view.prompt.md  optimize-performance.prompt.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
assets/src/: styles.css
charity/: admin.py  analytics_models.py  analytics_urls.py  analytics_views.py  api_reports.py  apps.py  context_processors.py  exceptions.py  forms.py  mixins.py  models.py  models_analytics.py  permissions.py  signals.py  tasks.py  tests.py  tests_multi_tenancy.py  urls.py  urls_analytics.py  views.py  views_admin.py  views_analytics.py  views_auth.py  views_automation.py  views_batch.py  views_batches.py  views_billing.py  views_campaign.py  views_clients.py  views_crm.py  views_donors.py  views_invoice_actions.py  views_invoice_exports.py  views_invoices.py  views_revenue.py  views_tracking.py  views_webhooks.py
charity/api/: serializers.py  urls.py  views.py  views_reports.py
charity/api/withthanks_api_backup/: serializers.py  urls.py
charity/management/commands/: ensure_superuser.py  export_batches_csv.py  export_invoices_csv.py  export_jobs_csv.py  export_received_emails_csv.py  export_unsubscribes_csv.py  generate_videos.py  seed_analytics.py  seed_data.py  seed_services.py
charity/migrations/: 0001_initial.py  0002_charity_user_texttemplate_videotemplate.py  0003_campaign_donor_donation_videosendlog.py  0003_donationjob.py  0004_donationjob_batch_id_donationjob_completed_at_and_more.py  0004_videosendlog_stream_fields.py  0005_donationjob_generation_time.py  0006_donationjob_fake_views_donationjob_real_views.py  0007_donationbatch_donationjob_donation_batch.py  0008_unsubscribeduser.py  0009_alter_unsubscribeduser_options_and_more.py  0010_receivedemail.py  0011_charity_campaign_name_charity_domain_and_more.py  0012_invoice.py  0013_packagecode_campaign_campaignfield.py  0014_invoice_billing_address_invoice_billing_email_and_more.py  0015_charitymember_charity_members.py  0016_charity_gdpr_compliant_donationbatch_charity_and_more.py  0017_receivedemail_charity_unsubscribeduser_charity_and_more.py  0018_charity_account_manager_and_more.py  0019_donationbatch_campaign_donationbatch_campaign_name.py  0020_donationbatch_media_type_donationbatch_text_template_and_more.py  0021_charity_thank_you_card_alter_campaign_appeal_type.py  0022_donationjob_media_type_override.py  0023_donationjob_fake_clicks_donationjob_real_clicks.py  0024_alter_charity_logo_alter_charity_thank_you_card_and_more.py  0025_charity_base_video_file_charity_elevenlabs_voice_id_and_more.py  0026_remove_donationbatch_text_template_and_more.py  0027_remove_campaign_campaign_manager_email_and_more.py  0028_alter_campaign_appeal_type.py  0029_alter_donationjob_campaign_and_more.py  0030_campaign_is_personalized.py  0031_charity_gratitude_card.py  0032_alter_campaign_appeal_type_emailtracking.py  0033_emailtracking_completion_time_and_more.py  0034_emailtracking_video_completed_at_and_more.py  0035_campaign_charity_video_campaign_gratitude_video.py  0036_migrate_client_videos_to_campaign.py  0037_donationjob_appeal_type.py  0038_charity_blackbaud_client_id_and_more.py  (+46 more)
charity/services/: __init__.py  analytics_service.py  batch_service.py  cleanup_service.py  invoice_service.py  stripe_service.py  sync_bridge.py  video_build_service.py  video_builder.py  video_dispatch.py  video_dispatch_service.py  video_pipeline_service.py
charity/services/withthanks_services_backup/: video_dispatch.py
charity/static/charity/: admin_dashboard.css  campaign_admin.js  global_saas.css
charity/templates/: _invoice_content.html  base_dashboard.html  batch_report.html  client_edit.html  client_setup.html  clients.html  create_invoice.html  dashboard.html  donations.html  donor_detail.html  donors.html  home.html  invoice_detail.html  invoice_edit.html  invoice_pdf.html  invoices.html  login.html  logs.html  onboarding.html  profile.html  register.html  report_pdf.html  revenue_dashboard.html  send_email_wizard.html  stitched_video.html  unsubscribe.html  upload_csv.html  video_landing.html  voiceovers_list.html
charity/templates/analytics/: campaigns.html  charity_billing_snapshot.html  charity_campaign_summary.html  charity_donor_heatmap.html  charity_list_hygiene.html  charity_video_engagement.html  client_billing_snapshot.html  client_campaign_summary.html  client_donor_heatmap.html  client_list_hygiene.html  client_video_engagement.html  delivery.html  home.html  internal_adoption.html  internal_revenue.html  internal_storage.html  internal_volume.html  metabase_embed.html  (+2 more)
charity/templatetags/: charity_extras.py
charity/utils/: access_control.py  batch_uploads.py  cloudflare_stream.py  csv_rows.py  exports.py  filenames.py  media_utils.py  metrics_sim.py  resend_utils.py  tracking_security.py  video_utils.py  voiceover.py  voiceover_utils.py
scripts/: check_production_guards.py
withthanks/: __init__.py  asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
(+17 files in other folders)
